<resources>
    <string name="app_name">ReportMate</string>
    <string name="demo_description">demo description</string>
    <string name="mccb_testing_n_ocr_report">MCCB Testing \n OCR Report</string>
    <string name="employee_id">Employee ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="developed_by_factory_next">Developed by Factory Next</string>
    <string name="log_in">Log in</string>
    <string name="to_your_ocr_account">to your OCR account</string>
    <string name="bangla">Bangla</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_settings">Account Settings</string>
    <string name="home">Home</string>
    <string name="user_guidelines">User Guidelines</string>
    <string name="draft_report">Ongoing Report</string>
    <string name="no_match_yet">No match yet</string>
    <string name="generate_new_report">Generate New Report</string>
    <string name="previous_report_history">Previous Report History</string>
    <string name="guidelines_text">For OCR Based input\n\n1. User will open up the camera, will take an image, then system will prompt the user to contain to perform OCR.\n\n2. After OCR is completed the input field will be populated. These fields can be populated (if OCR goes wrong)</string>
    <string name="mccb_testing_re">MCCB Testing Report Generation using OCR for Factory Inspection</string>
    <string name="insan_arafat_jamil">Insan Arafat Jamil</string>
    <string name="start_inspection">Start Inspection</string>
    <string name="generate_new_report_">Generate New Report</string>
    <string name="id_icon">ID Icon</string>
    <string name="esv0012345">ESV0012345</string>
    <string name="auto_filled_confirm_the_information">Auto filled. Confirm the information</string>
    <string name="date_of_inspection">Date of Inspection</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="guidelines">Guidelines</string>
    <string name="confirm_the_auto_filled_information_these_will_use_to_evaluate_and_verification_in_future">Confirm the auto filled information. These will use to evaluate and verification in future.</string>
    <string name="nel_swgrts_0012345">NEL-SWGRTS-0012345</string>
    <string name="project_no">Project No.</string>
    <string name="am">AM</string>
    <string name="time_of_inspection">Time of Inspection</string>
    <string name="save_and_confirm">Save &amp; Confirm</string>
    <string name="save_and_next">Save &amp; Next</string>
    <string name="save_confirm"><![CDATA[Save & Confirm]]></string>
    <string name="guideliner_site_details"><![CDATA[Guidelines\n\nClicking the icon will open your mobile’s camera. Then take a clear img of your device after measuring the air temp & humidity.\n\nYou can take more than one img for clear input.]]></string>
    <string name="air_temp">Air Temp.</string>
    <string name="air_temp_and_humidity_img">Air Temp. and Humidity Img</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="last_inspection_report_no">Last Inspection Report No.</string>
    <string name="equipment_location">Equipment Location</string>
    <string name="owner_identification">Owner Identification</string>
    <string name="cancel">Cancel</string>
    <string name="customer_details">Customer Details</string>
    <string name="equipment_name">Equipment Name</string>
    <string name="enter_here">Enter here..</string>
    <string name="site_details">Site Details</string>
    <string name="general_image">General Image</string>
    <string name="customer_name">Customer Name</string>
    <string name="summary">Summary</string>
    <string name="air_temp_humidity_img">Air Temp.&amp; Humidity Img:</string>
    <string name="equipment_details">Equipment Details</string>
    <string name="total_number_of_circuit_breaker">Total Number of Circuit Breaker</string>
    <string name="list_of_circuit_breaker_size">List of Circuit Breaker Size</string>
    <string name="blank">__</string>
    <string name="breaker_size">Breaker Size : </string>
    <string name="name">Name : </string>
    <string name="skip">Skip</string>
    <string name="panel_board_rating">Panel Board Rating</string>
    <string name="test_voltage">Test Voltage</string>
    <string name="catalog">Catalog</string>
    <string name="model_no">Model No.</string>
    <string name="amps">AMPS</string>
    <string name="voltage">Voltage</string>
    <string name="manufacturer_curve_details_mfg">Manufacturer Curve Details (MFG)</string>
    <string name="crm_and_trip_test">CRM &amp; Trip Test</string>
    <string name="inspection_types">Inspection Types</string>
    <string name="select_the_type_of_inspection">Select the type of Inspection</string>
    <string name="ir_test">IR Test</string>
    <string name="not_selected">not_selected</string>
    <string name="selected">selected</string>
    <string name="line_to_ground_connection">Line To Ground Connection</string>
    <string name="a_g_connection">A-G </string>
    <string name="a_b_connection">A-B </string>
    <string name="filled_from_ocr_edit_if_needed">Filled from OCR. Edit if needed.</string>
    <string name="click_the_icon_to_open_your_camera">Click the icon to open your camera</string>
    <string name="a_g">A-G</string>
    <string name="b_g">B-G</string>
    <string name="c_g">C-G</string>

    <string name="a_b">A-B</string>
    <string name="b_c">B-C</string>
    <string name="c_a">C-A</string>

    <string name="a_b_">A-B:</string>
    <string name="b_c_">B-C:</string>
    <string name="c_a_">C-A:</string>

    <string name="ir_test_connection_img_a_g">IR Test Connection Img(A-G)</string>
    <string name="ir_test_result_img_a_g">IR Test Result Img(A-G)</string>

    <string name="ir_test_connection_img_a_b">IR Test Connection Img(A-B)</string>
    <string name="ir_test_result_img_a_b">IR Test Result Img(A-B)</string>


    <string name="ir_test_connection_img_b_g">IR Test Connection Img(B-G)</string>
    <string name="ir_test_connection_img_b_c">IR Test Connection Img(B-C)</string>
    <string name="ir_test_connection_img_c_a">IR Test Connection Img(C-A)</string>
    <string name="ir_test_result_img_b_g">IR Test Result Img(B-G)</string>
    <string name="ir_test_result_img_b_c">IR Test Result Img(B-C)</string>
    <string name="ir_test_result_img_c_a">IR Test Result Img(C-A)</string>
    <string name="ir_test_connection_img_c_g">IR Test Connection Img(C-G)</string>
    <string name="ir_test_result_img_c_g">IR Test Result Img(C-G)</string>
    <string name="b_c_connection">B-C </string>
    <string name="c_a_connection">C-A </string>
    <string name="c_g_connection">C-G </string>
    <string name="line_to_line_connection">Line to Line connection</string>
    <string name="b_g_connection">B-G </string>
    <string name="select_circuit_breaker">Select Circuit Breaker</string>
    <string name="ckt_breaker_size">Ckt Breaker Size</string>
    <string name="crm_test">CRM Test</string>
    <string name="circuit_breaker_name">Circuit Breaker Name</string>
    <string name="crm_test_connection_img">CRM Test Connection Img</string>
    <string name="trip_test">Trip Test</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="user_address">User Address</string>
    <string name="customer_address">Customer Address</string>
    <string name="rename_circuit_breaker">Rename Circuit Breaker</string>
    <string name="edit_inputs">Edit Inputs</string>
    <string name="retake">Retake</string>
    <string name="perform_ocr">Perform OCR</string>
    <string name="camera_placeholder">Camera Placeholder</string>
    <string name="nel_swgrts">NEL-SWGRTS</string>
    <string name="image_of_the_db_box_panel_front">Img of the DB Box Panel Front</string>
    <string name="img_of_the_db_box_panel_inside">Img of the DB Box Panel Inside</string>
    <string name="img_of_the_db_box_panel_nameplate">Img of the DB Box Panel Nameplate</string>
    <string name="save_the_changes">Save the Changes</string>
    <string name="confirm_the_information_as_you_cannot_change_the_inputs_nthe_process_will_continue_to_perform_as_your_inputs">Confirm the information as you cannot change the inputs.\nThe process will continue to perform as your inputs.</string>
    <string name="delete_circuit">Delete Circuit</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_do_add_circuit_breaker_size">Do you want do add Circuit Breaker size:</string>
    <string name="add_circuit_list">Add Circuit List</string>
    <string name="current_injector_connecting_img">Current Injector Connecting Img</string>
    <string name="injected_current_img">Injected Current Img</string>
    <string name="trip_time_connection_image">Trip Time Connection Image</string>
    <string name="trip_time_img">Trip Time Img</string>
    <string name="after_trip_time">After Trip </string>
    <string name="curve_range">Curve Range</string>
    <string name="mfg">MFG</string>
    <string name="test_amplitude">Test Amplitude</string>
    <string name="after_trip">After Trip</string>
    <string name="instant_trip">Instant Trip</string>
    <string name="date_of_last_inspection">Date of Last Inspection</string>
    <string name="address_">Address:</string>
    <string name="owner_">Owner:</string>
    <string name="date_of_last_inspection_">Date of Last Inspection:</string>
    <string name="last_report_no">Last Report No:</string>
    <string name="air_temp_">Air Temp:</string>
    <string name="rel_humidity">Rel Humidity:</string>
    <string name="equipment_location_">Equipment Location:</string>
    <string name="equipment_name_">Equipment Name:</string>
    <string name="circuit_breaker_size">Circuit Breaker Size</string>
    <string name="y_res">Y-RES</string>
    <string name="y_res_">Y-RES:</string>
    <string name="b_res">B-RES</string>
    <string name="b_res_">B-RES:</string>
    <string name="r_res">R-RES</string>
    <string name="r_res_">R-RES:</string>
    <string name="trip_time">Trip Time</string>
    <string name="save_image">Save Image</string>
    <string name="save">Save</string>
    <string name="ir_test_results">IR Test Results</string>
    <string name="crm_test_result">CRM Test Result</string>
    <string name="trip_test_result">Trip Test Result</string>
    <string name="a_g_">A-G:</string>
    <string name="b_g_">B-G:</string>
    <string name="c_g_">C-G:</string>
    <string name="contact_resis">Contact Resis:</string>
    <string name="crm_test_result_img">CRM Test Result Img</string>
    <string name="current_injector_connection_img">Current Injector connection Img</string>
    <string name="report_summary">Report Summary</string>
    <string name="all_details">All Details</string>
    <string name="view_all">View All</string>
    <string name="ongoing_report">Ongoing Report</string>
    <string name="report_history">Report History</string>
    <string name="client_name">Client Name</string>
    <string name="project_name">Project Name</string>
    <string name="confirm_action">Confirm Action</string>
    <string name="are_you_sure_you_want_to_save_circuits">Are you sure you want to save circuits?</string>
    <string name="are_you_sure_you_want_to_generate_report">Are you sure you want generate report?</string>
    <string name="report_saved_to_ongoing_list">Report saved to ongoing list</string>
    <string name="report_is_generating">Report is generating</string>
    <string name="customer_">Customer:</string>
    <string name="add_to_history">Add To History</string>
    <string name="img_of_the_panel_grounding">Img of the Panel Grounding</string>

</resources>