<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="12dp">

    <!-- Radio Button -->
    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:buttonTint="@color/line_gray"
        android:checked="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Name Text -->
    <TextView
        android:id="@+id/tvNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/radioButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="00"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvNameTitle"
        app:layout_constraintTop_toTopOf="@+id/tvNameTitle"
        app:layout_constraintBottom_toBottomOf="@+id/tvNameTitle"/>

    <!-- Breaker Size Text -->
    <TextView
        android:id="@+id/tvBreakerSizeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breaker_size"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvNameTitle"
        app:layout_constraintTop_toBottomOf="@id/tvNameTitle" />

    <TextView
        android:id="@+id/tvBreakerSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvBreakerSizeTitle"
        app:layout_constraintTop_toTopOf="@+id/tvBreakerSizeTitle"
        app:layout_constraintStart_toEndOf="@+id/tvBreakerSizeTitle"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
